# XXPlayer

./: README.en.md  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/me/xfly/boboplayer/: ExampleInstrumentedTest.java
app/src/androidTest/java/me/xfly/xxplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  LogUtil.h  base_decoder.h  base_render.h  ffmpeg_audio_decoder.cpp  ffmpeg_audio_decoder.h  ffmpeg_video_decoder.cpp  ffmpeg_video_decoder.h  java_call.cpp  java_call.h  jvm_android.cpp  jvm_android.h  mediacodec_video_decoder.cpp  mediacodec_video_decoder.h  native_window_video_render.cpp  native_window_video_render.h  opengl_video_render.cpp  opengl_video_render.h  opensl_audio_render.cpp  opensl_audio_render.h  xx_media_channel.cpp  xx_media_channel.h  xx_media_extractor.cpp  xx_media_extractor.h  xx_media_player.cpp  xx_media_player.h  xx_msg.h  xx_msg_queue.h  xx_play.cpp  xx_play.h  xxplayer_jni.cpp
app/src/main/cpp/includes/ffmpeg/libavformat/: avformat.h
app/src/main/java/me/xfly/boboplayer/: AbstractMediaPlayer.java  IMediaDataSource.java  IMediaPlayer.java  MainActivity.java  MediaInfo.java  TimedText.java  VideoSurfaceView.java  XXMediaPlayer.java
app/src/main/java/me/xfly/xxplayer/: AbstractMediaPlayer.java  IMediaDataSource.java  IMediaPlayer.java  MainActivity.java  MediaInfo.java  PlayActivity.java  TimedText.java  VideoSurfaceView.java  XXMediaCodec.java  XXMediaPlayer.java
app/src/main/jniLibs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/jniLibs/x86_64/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/res/layout/: activity_main.xml  activity_play.xml
app/src/main/res/values/: strings.xml
app/src/test/java/me/xfly/boboplayer/: ExampleUnitTest.java
app/src/test/java/me/xfly/xxplayer/: ExampleUnitTest.java
